--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,8 +31,9 @@ jobs:
     - run: npm test
     
     - name: Install Dependencies (prod)
-        run: yarn install --frozen-lockfile --production
-
+        
+    - run: yarn install --frozen-lockfile --production
+        
     - name: Run Tests (JEST)
         run: yarn test --ci --silent --testPathIgnorePatterns=experimental
         env:
