--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [12.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -31,10 +31,10 @@ jobs:
     - run: npm test
     
     - name: Install Dependencies (prod)
-      run: yarn install --frozen-lockfile --production
+      run: yarn install
         
     - name: Run Tests (JEST)
-      run: yarn test --ci --silent --testPathIgnorePatterns=experimental
+      run: yarn test --ci --silent
       env:
         CI: true
         IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
