--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,28 +14,21 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-    
-    - name: Install Dependencies (prod)
-      run: yarn install
-        
-    - name: Run Tests (JEST)
-      run: yarn test --ci --silent
-      env:
-        CI: true
-        IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
-        WEATHER_TOKEN: ${{ secrets.WEATHER_TOKEN }}
+      - name: Git checkout
+        uses: actions/checkout@v2
+
+      - name: Use Node 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      - name: Install Dependencies (prod)
+        run: yarn install --frozen-lockfile --production
+
+      - name: Run Tests (JEST)
+        run: yarn test --ci --silent --testPathIgnorePatterns=experimental
+        env:
+          CI: true
+          IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
+          WEATHER_TOKEN: ${{ secrets.WEATHER_TOKEN }}
