--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
         run: yarn install --frozen-lockfile --production
 
       - name: Run Tests (JEST)
-        #run: yarn test --ci --silent --testPathIgnorePatterns=experimental
+        run: yarn run --ci --silent --testPathIgnorePatterns=experimental
         env:
           CI: true
           IPINFO_TOKEN: ${{ secrets.IPINFO_TOKEN }}
