--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Install Dependencies (prod)
         run: yarn install --frozen-lockfile --production
         
-      - name: setup node
-        run: npm init -y
+      #- name: setup node
+      #  run: npm init -y
         
-      - name: setup dotenv
-        run: npm i dotenv
+      #- name: setup dotenv
+      #  run: npm i dotenv
 
       - name: Run Tests (JEST)
         run: yarn run --ci #--silent --testPathIgnorePatterns=experimental
