--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,4 +43,4 @@ jobs:
       #  run: 
           
       - name: setup file
-        run: IPINFO_TOKEN='12' node js/set_variables.js
+        run: IPINFO_TOKEN=${{ secrets.IPINFO_TOKEN }} node js/set_variables.js
